--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.0.0",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.7",
     "uuid": "^8.3.2"
   }
 }
